[package]
name = "kvs"
version = "0.1.0"
authors = ["TangliziGit <tanglizimail@foxmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
clap = "2.32.0"
failure = "0.1.8"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"