[package]
name = "kvs"
version = "0.1.0"
authors = ["TangliziGit <tanglizimail@foxmail.com>"]
description = "A key-value store"
edition = "2018"

[dependencies]
slog = "2.5.0"
slog-term = "2.5.0"
slog-async = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
clap = "2.32.0"
failure = "0.1.8"
sled = "0.34.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

